Final con mostrar turnos y puesto